--- a/bench/test.hbs
+++ b/bench/test.hbs
@@ -29,7 +29,7 @@
         {{/if}}
     </td>
     <td>
-        <div class="main__table-text">{{this.startdate}}</div>
+        <div class="main__table-text">{{formatdate this.startdate}}</div>
     </td>
     <td>
         <div class="main__table-btns">
