--- a/bench/template/test.hbs
+++ b/bench/template/test.hbs
@@ -28,7 +28,7 @@
 				{{#if this.visible}}second{{/if}}
 				more nested test :
 				{{#if this.visible}}first{{#if this.visible}} - second{{/if}}{{/if}}
-			{{#else}}
+			{{else}}
 				<div class="main__table-text main__table-text--red">Hidden</div>
 			{{/if}}
 		</td>
